--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,23 +20,62 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-#      - name: Build test client
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: ./client
-#          file: ./client/Dockerfile.dev
-#          load: true
-#          tags: iuriinedostup/react-test
-#
-#      - name: test app
-#        run: docker run -e CI=true iuriinedostup/react-test npm run test
+      - name: Build client
+        uses: docker/build-push-action@v2
+        with:
+          context: ./client
+          file: ./client/Dockerfile.dev
+          load: true
+          tags: iuriinedostup/multi-client-ci
+
+      - name: test client app
+        run: docker run -e CI=true iuriinedostup/multi-client-ci npm run test
+
+      - name: Build server
+        uses: docker/build-push-action@v2
+        with:
+          context: ./server
+          file: ./server/Dockerfile.dev
+          load: true
+          tags: iuriinedostup/multi-server-ci
+
+      - name: test server app
+        run: docker run -e CI=true iuriinedostup/multi-server-ci npm run test
+
+      - name: Build worker
+        uses: docker/build-push-action@v2
+        with:
+          context: ./worker
+          file: ./worker/Dockerfile.dev
+          load: true
+          tags: iuriinedostup/multi-worker-ci
+
+      - name: test worker app
+        run: docker run -e CI=true iuriinedostup/multi-worker-ci npm run test
 
   build:
     runs-on: ubuntu-latest
     needs: test
+    env:
+      DOCKER_REPO: iuriinedostup
+      SERVER_IMAGE: fibcalc-server
+      CLIENT_IMAGE: fibcalc-server
+      WORKER_IMAGE: fibcalc-server
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Prepare build
+        id: prep
+        run: |
+          SHA=$(git rev-parse --short HEAD)
+          echo ::set-output name=sha::${SHA}
+          echo ::set-output name=client_tag::${{  env.DOCKER_REPO  }}/${{  env.CLIENT_IMAGE  }}:${SHA}
+          echo ::set-output name=client_tag_latest::${{  env.DOCKER_REPO  }}/${{  env.CLIENT_IMAGE  }}
+          echo ::set-output name=worker_tag::${{  env.DOCKER_REPO  }}/${{  env.WORKER_IMAGE  }}:${SHA}
+          echo ::set-output name=worker_tag_latest::${{  env.DOCKER_REPO  }}/${{  env.WORKER_IMAGE  }}
+          echo ::set-output name=server_tag::${{  env.DOCKER_REPO  }}/${{  env.SERVER_IMAGE  }}:${SHA}
+          echo ::set-output name=server_tag_latest::${{  env.DOCKER_REPO  }}/${{  env.SERVER_IMAGE  }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -47,36 +86,35 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-#      - name: Build client
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: ./client
-#          file: ./client/Dockerfile.dev
-#          push: true
-#          tags: iuriinedostup/multi-client
-#
-#      - name: Build nginx
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: ./nginx
-#          file: ./nginx/Dockerfile.dev
-#          push: true
-#          tags: iuriinedostup/multi-nginx
-#      - name: Build server
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: ./server
-#          file: ./server/Dockerfile.dev
-#          push: true
-#          tags: iuriinedostup/multi-server
-#
-#      - name: Build worker
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: ./worker
-#          file: ./worker/Dockerfile.dev
-#          push: true
-#          tags: iuriinedostup/multi-worker
+      - name: Build client
+        uses: docker/build-push-action@v2
+        with:
+          context: ./client
+          file: ./client/Dockerfile
+          push: true
+          tags: |
+            ${{steps.prep.outputs.client_tag }}
+            ${{steps.prep.outputs.client_tag_latest }}
+
+      - name: Build worker
+        uses: docker/build-push-action@v2
+        with:
+          context: ./worker
+          file: ./worker/Dockerfile
+          push: true
+          tags: |
+            ${{steps.prep.outputs.worker_tag }}
+            ${{steps.prep.outputs.worker_tag_latest }}
+
+      - name: Build server
+        uses: docker/build-push-action@v2
+        with:
+          context: ./server
+          file: ./server/Dockerfile
+          push: true
+          tags: |
+            ${{steps.prep.outputs.server_tag }}
+            ${{steps.prep.outputs.server_tag_latest }}
 
 #  deploy:
 #    runs-on: ubuntu-latest
