--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,11 @@ on:
       - master
 
 jobs:
+  env:
+    DOCKER_REPO: iuriinedostup
+    SERVER_IMAGE_NAME: fibcalc-k8s-server
+    CLIENT_IMAGE_NAME: fibcalc-k8s-client
+    WORKER_IMAGE_NAME: fibcalc-k8s-worker
   test:
     runs-on: ubuntu-latest
     steps:
@@ -56,11 +61,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: test
-    env:
-      DOCKER_REPO: iuriinedostup
-      SERVER_IMAGE: fibcalc-k8s-server
-      CLIENT_IMAGE: fibcalc-k8s-client
-      WORKER_IMAGE: fibcalc-k8s-worker
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -70,12 +70,12 @@ jobs:
         run: |
           SHA=$(git rev-parse --short HEAD)
           echo ::set-output name=sha::${SHA}
-          echo ::set-output name=client_tag::${{  env.DOCKER_REPO  }}/${{  env.CLIENT_IMAGE  }}:${SHA}
-          echo ::set-output name=client_tag_latest::${{  env.DOCKER_REPO  }}/${{  env.CLIENT_IMAGE  }}
-          echo ::set-output name=worker_tag::${{  env.DOCKER_REPO  }}/${{  env.WORKER_IMAGE  }}:${SHA}
-          echo ::set-output name=worker_tag_latest::${{  env.DOCKER_REPO  }}/${{  env.WORKER_IMAGE  }}
-          echo ::set-output name=server_tag::${{  env.DOCKER_REPO  }}/${{  env.SERVER_IMAGE  }}:${SHA}
-          echo ::set-output name=server_tag_latest::${{  env.DOCKER_REPO  }}/${{  env.SERVER_IMAGE  }}
+          echo ::set-output name=client_image::${{  env.DOCKER_REPO  }}/${{  env.CLIENT_IMAGE_NAME  }}:${SHA}
+          echo ::set-output name=client_image_latest::${{  env.DOCKER_REPO  }}/${{  env.CLIENT_IMAGE_NAME  }}
+          echo ::set-output name=worker_image::${{  env.DOCKER_REPO  }}/${{  env.WORKER_IMAGE_NAME  }}:${SHA}
+          echo ::set-output name=worker_image_latest::${{  env.DOCKER_REPO  }}/${{  env.WORKER_IMAGE_NAME  }}
+          echo ::set-output name=server_image::${{  env.DOCKER_REPO  }}/${{  env.SERVER_IMAGE_NAME  }}:${SHA}
+          echo ::set-output name=server_image_latest::${{  env.DOCKER_REPO  }}/${{  env.SERVER_IMAGE_NAME  }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -93,8 +93,8 @@ jobs:
           file: ./client/Dockerfile
           push: true
           tags: |
-            ${{steps.prep.outputs.client_tag }}
-            ${{steps.prep.outputs.client_tag_latest }}
+            ${{steps.prep.outputs.client_image }}
+            ${{steps.prep.outputs.client_image_latest }}
 
       - name: Build worker
         uses: docker/build-push-action@v2
@@ -103,8 +103,8 @@ jobs:
           file: ./worker/Dockerfile
           push: true
           tags: |
-            ${{steps.prep.outputs.worker_tag }}
-            ${{steps.prep.outputs.worker_tag_latest }}
+            ${{steps.prep.outputs.worker_image }}
+            ${{steps.prep.outputs.worker_image_latest }}
 
       - name: Build server
         uses: docker/build-push-action@v2
@@ -113,27 +113,40 @@ jobs:
           file: ./server/Dockerfile
           push: true
           tags: |
-            ${{steps.prep.outputs.server_tag }}
-            ${{steps.prep.outputs.server_tag_latest }}
+            ${{steps.prep.outputs.server_image }}
+            ${{steps.prep.outputs.server_image_latest }}
+  deploy:
+    runs-on: ubuntu-latest
+      needs: build
+      env:
+        DOCKER_REPO: iuriinedostup
+        SERVER_IMAGE: fibcalc-k8s-server
+        CLIENT_IMAGE: fibcalc-k8s-client
+        WORKER_IMAGE: fibcalc-k8s-worker
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v2
 
-#  deploy:
-#    runs-on: ubuntu-latest
-#    needs: build
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#
-#      - name: Generate deployment package
-#        run: zip -r deploy.zip . -x '*.git*'
-#
-#      - name: Deploy to EB
-#        uses: einaregilsson/beanstalk-deploy@v18
-#        with:
-#          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          application_name: multi-docker-app
-#          environment_name: multi-docker-env
-#          existing_bucket_name: elasticbeanstalk-eu-west-1-054496151910
-#          region: eu-west-1
-#          version_label: ${{ github.sha }}
-#          deployment_package: deploy.zip
+        - name: Prepare build
+          id: prep
+          run: |
+            echo ::set-output name=sha::${SHA}
+            echo ::set-output name=client_image::${{  env.DOCKER_REPO  }}/${{  env.CLIENT_IMAGE_NAME  }}:${SHA}
+            echo ::set-output name=worker_image::${{  env.DOCKER_REPO  }}/${{  env.WORKER_IMAGE_NAME  }}:${SHA}
+            echo ::set-output name=server_image::${{  env.DOCKER_REPO  }}/${{  env.SERVER_IMAGE_NAME  }}:${SHA}
+
+        - name: configure aws credentials
+          uses: aws-actions/configure-aws-credentials@v1
+          with:
+            role-to-assume: {{ secrets.DEPLOY_ROLE_ARN }}
+            role-duration-seconds: 900 # the ttl of the session, in seconds.
+            aws-region: {{ secrets.DEPLOY_REGION }} # use your region here.
+
+        -name: deploy to EKS
+          run: |
+            export CLUSTER_NAME={{ secrets.CLUSTER_NAME}}
+            export CLUSTER_REGION={{ secrets.DEPLOY_REGION}}
+            export SERVER_IMAGE=${{  steps.prep.outputs.server  }}
+            export WORKER_IMAGE=${{  steps.prep.outputs.worker  }}
+            export CLIENT_IMAGE=${{  steps.prep.outputs.client_image  }}
+            ./devops/k8s/deploy.sh
