--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,13 @@ on:
     branches:
       - master
 
+env:
+  DOCKER_REPO: iuriinedostup
+  SERVER_IMAGE_NAME: fibcalc-k8s-server
+  CLIENT_IMAGE_NAME: fibcalc-k8s-client
+  WORKER_IMAGE_NAME: fibcalc-k8s-worker
+
 jobs:
-  env:
-    DOCKER_REPO: iuriinedostup
-    SERVER_IMAGE_NAME: fibcalc-k8s-server
-    CLIENT_IMAGE_NAME: fibcalc-k8s-client
-    WORKER_IMAGE_NAME: fibcalc-k8s-worker
   test:
     runs-on: ubuntu-latest
     steps:
@@ -113,40 +114,45 @@ jobs:
           file: ./server/Dockerfile
           push: true
           tags: |
-            ${{steps.prep.outputs.server_image }}
-            ${{steps.prep.outputs.server_image_latest }}
+            ${{  steps.prep.outputs.server_image  }}
+            ${{  steps.prep.outputs.server_image_latest  }}
   deploy:
     runs-on: ubuntu-latest
-      needs: build
-      env:
-        DOCKER_REPO: iuriinedostup
-        SERVER_IMAGE: fibcalc-k8s-server
-        CLIENT_IMAGE: fibcalc-k8s-client
-        WORKER_IMAGE: fibcalc-k8s-worker
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v2
+    needs: build
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-        - name: Prepare build
-          id: prep
-          run: |
-            echo ::set-output name=sha::${SHA}
-            echo ::set-output name=client_image::${{  env.DOCKER_REPO  }}/${{  env.CLIENT_IMAGE_NAME  }}:${SHA}
-            echo ::set-output name=worker_image::${{  env.DOCKER_REPO  }}/${{  env.WORKER_IMAGE_NAME  }}:${SHA}
-            echo ::set-output name=server_image::${{  env.DOCKER_REPO  }}/${{  env.SERVER_IMAGE_NAME  }}:${SHA}
+      - name: Prepare build
+        id: prep
+        run: |
+          SHA=$(git rev-parse --short HEAD)
+          echo ::set-output name=sha::${SHA}
+          echo ::set-output name=client_image::${{  env.DOCKER_REPO  }}/${{  env.CLIENT_IMAGE_NAME  }}:${SHA}
+          echo ::set-output name=worker_image::${{  env.DOCKER_REPO  }}/${{  env.WORKER_IMAGE_NAME  }}:${SHA}
+          echo ::set-output name=server_image::${{  env.DOCKER_REPO  }}/${{  env.SERVER_IMAGE_NAME  }}:${SHA}
 
-        - name: configure aws credentials
-          uses: aws-actions/configure-aws-credentials@v1
-          with:
-            role-to-assume: {{ secrets.DEPLOY_ROLE_ARN }}
-            role-duration-seconds: 900 # the ttl of the session, in seconds.
-            aws-region: {{ secrets.DEPLOY_REGION }} # use your region here.
+      - name: configure aws credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.DEPLOY_ROLE_ARN }}
+          role-duration-seconds: 900 # the ttl of the session, in seconds.
+          aws-region: ${{ secrets.DEPLOY_REGION }} # use your region here.
 
-        -name: deploy to EKS
-          run: |
-            export CLUSTER_NAME={{ secrets.CLUSTER_NAME}}
-            export CLUSTER_REGION={{ secrets.DEPLOY_REGION}}
-            export SERVER_IMAGE=${{  steps.prep.outputs.server  }}
-            export WORKER_IMAGE=${{  steps.prep.outputs.worker  }}
-            export CLIENT_IMAGE=${{  steps.prep.outputs.client_image  }}
-            ./devops/k8s/deploy.sh
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: deploy to EKS
+        env:
+          CLUSTER_NAME: ${{ secrets.CLUSTER_NAME}}
+          CLUSTER_REGION: ${{ secrets.DEPLOY_REGION}}
+          SERVER_IMAGE: ${{  steps.prep.outputs.server_image  }}
+          WORKER_IMAGE: ${{  steps.prep.outputs.worker_image  }}
+          CLIENT_IMAGE: ${{  steps.prep.outputs.client_image  }}
+        run: ./devops/bin/deploy.sh
