--- a/devops/k8s/postgres-deployment.yaml
+++ b/devops/k8s/postgres-deployment.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  PGPASSWORD: 123456  # needs to be encrypted
+  PGPASSWORD: MTIzNDU2Cg==  # needs to be encrypted
 kind: Secret
 metadata:
   name: pgpassword
