--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Multi container
+name: Multi container k8s application
 on:
   push:
     branches:
@@ -62,6 +62,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: test
+    if: false  # disabling step for now
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -119,6 +120,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    if: false  # this is demo project: skipping deployment as there is no infra anymore
     permissions:
       id-token: write
       contents: read
